admin and product create

--- a/Server/confing.env
+++ b/Server/confing.env
@@ -1,2 +1,4 @@
-Port=7000
-DATABASE_URL=mongodb+srv://saharkhazraee70:S&s687095@cluster0.sjkdr.mongodb.net/
+Port=5000
+DATABASE_URL1=mongodb+srv://saharkhazraee70:S&s687095@cluster0.sjkdr.mongodb.net/
+DATABASE_URL=mongodb://localhost:27017/E-commerce-fashionclothes
+JWT_SECRET=Sahar1370
